--- a/pelican-bootstrap3/templates/includes/comments.html
+++ b/pelican-bootstrap3/templates/includes/comments.html
@@ -39,3 +39,28 @@
 
     </section>
 {% endif %}
+
+{% if article.comments %}
+    <hr />
+    <section class="comments">
+      <h2>Comments</h2>
+
+    {% for comment in article.comments recursive %}
+        {% if loop.depth0 == 0 %}
+            {% set marginLeft = 0 %}
+        {% else %}
+            {% set marginLeft = 50 %}
+        {% endif %}
+            <article id="comment-{{comment.id}}">
+                <a href="{{ SITEURL }}/{{ article.url }}#comment-{{comment.id}}" rel="bookmark" title="Permalink to this comment">Permalink</a>
+                <h4>{{ comment.author }}</h4>
+                <p>Posted on <abbr class="published" title="{{ comment.date.isoformat() }}">{{ comment.locale_date }}</abbr></p>
+                {{ comment.metadata['my_custom_metadata'] }}
+                {{ comment.content }}
+                {% if comment.replies %}
+                    {{ loop(comment.replies) }}
+                {% endif %}
+            </article>
+    {% endfor %}
+    </section>
+{% endif %}
